fix main content alignment

--- a/css/index.css
+++ b/css/index.css
@@ -395,7 +395,7 @@ img {
 }
 .main-content {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: #424242;
